# gridgame

./: CMakeLists.txt  README.md
.cache/clangd/index/: algebra.cpp.4AA9C5985574155C.idx  algebra.h.4AA541CB673D9F1E.idx  any.hpp.063B1A0ACDE4F61E.idx  bad_any_cast.hpp.5A7D878C747E69C3.idx  clang.hpp.CBEEB7F865649F93.idx  clang_version.hpp.E692F973B0E78021.idx  config.h.95CB5999304B6F42.idx  config.hpp.8AAF60293C8FB7D5.idx  core.cpp.829CC139B84CD7BD.idx  core.h.1AD16DF6481EB1B0.idx  cstdint.hpp.A7EAA7A1C6B758BA.idx  cxx_composite.hpp.10FD66DB4C9747CB.idx  demangle.hpp.349E153D6E44A8B8.idx  dinkumware.hpp.16B21DA9B288DFBB.idx  exception.hpp.C543C6B08E5A3AE2.idx  fwd.hpp.4CDD0EC68AC50F4B.idx  generateTexture.cpp.81A81AD5319F4121.idx  generateTexture.h.7C246E115447BD9A.idx  glad.c.4148E788B947F93F.idx  glad.h.25C720B6730359F3.idx  glfw3.h.7A4BC0BE51629A40.idx  hash_fwd.hpp.31D70740720EF388.idx  helper_macros.hpp.7EA3AD835122DE2F.idx  khrplatform.h.9AD96D0BFFB6EC01.idx  loadShader.cpp.5A25D8BB05F036A0.idx  loadShader.h.7B15CEDEFA606CED.idx  loadString.cpp.0AC68D3C193F06D9.idx  loadString.h.034ED617BC9F4D63.idx  main.cpp.EC2507FAA7582008.idx  placeholder.hpp.A45671BF2D2D9794.idx  (+22 more)
assets/levels/: solids.s  walls.w
dependencies/glad/: glad.h
shaders/: fragment.frag  vertex.vert
src/: algebra.cpp  algebra.h  config.h  core.cpp  core.h  generateTexture.cpp  generateTexture.h  glad.c  globals.h  loadShader.cpp  loadShader.h  loadString.cpp  loadString.h  main.cpp  player.cpp  player.h  quadMesh.cpp  quadMesh.h  solids.cpp  solids.h  variables.h  walls.cpp  walls.h
(+4 files in other folders)
